# small

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  VERSION  appveyor.yml  ibuf.c  ibuf.h  mempool.c  mempool.h  obuf.c  obuf.h  quota.h  region.c  region.h  slab_arena.h  small.c  small.h  test.sh
debian/: .gitignore  changelog  control  copyright  libsmall-dev.install  libsmall.install  libsmall1.install  rules
include/small/: Matras.hpp  ibuf.h  lf_lifo.h  lsregion.h  lsregion_asan.h  matras.h  mempool.h  mempool_asan.h  obuf.h  obuf_asan.h  quota_lessor.h  region.h  region_asan.h  rlist.h  slab_arena.h  slab_arena_asan.h  slab_cache.h  slab_cache_asan.h  slab_list.h  small.h  small_asan.h  small_class.h  static.h  util.h
perf/: .gitignore  CMakeLists.txt  README.md  small.cc  small.perftest  small_alloc_perf.c
rpm/: small.spec
small/: builtins.h  cpbuf.cpp  cpbuf.hpp  cpbuf_alloc.hpp  features.c  features.h  ibuf.c  ibuf.h  lf_lifo.h  lifo.h  lsall.h  lsregion.c  lsregion.h  lsregion_asan.c  matras.c  matras.h  mempool.c  mempool.h  mempool_asan.c  mpp.hpp  obuf.c  obuf.h  obuf_asan.c  pm_mmap.c  pm_mmap.h  pm_pthread.c  pm_pthread.h  pmatomic.h  quota.h  quota_lessor.h  rb.h  region.c  region.h  region_asan.c  rlist.h  slab_arena.c  slab_arena.h  slab_arena_asan.c  slab_cache.c  slab_cache.h  (+12 more)
small/win32/: pmvcatomic.h  vcunistd.h  vsatomics.h  xatomic.h  xatomic0.h
test/: .gitignore  CMakeLists.txt  arena_mt.c  cpbuf.cpp  ibuf.c  ibuf.result  lf_lifo.c  lsall.cc  lsregion.c  lsregion.result  matras.cc  matras.result  mempool.c  obuf.c  quota.cc  quota.skipcond  quota_lessor.c  quota_lessor.result  rb.c  rb.result  rb_aug.c  rb_aug.result  rb_rand.cc  region.c  region.result  rlist.c  rlist.result  slab_arena.c  slab_cache.c  slab_cache.result  small_alloc.c  small_alloc_65536.result  small_class.c  small_class_branchless.result  small_granularity.c  small_granularity.result  static.c  static.result  suite.ini  test-run.sh  (+5 more)
